--- a/components/header/style.scss
+++ b/components/header/style.scss
@@ -6,8 +6,10 @@
   align-items: center;
   justify-content: space-between;
   position: fixed;
-  padding-top: 25px;
+  padding: 25px 0;
   width: 100%;
+  z-index: 528;
+  background: $colorPrimary100;
   & .content {
     margin-left: $paddingSection;
     margin-right: $paddingSection;
