--- a/components/header/style.scss
+++ b/components/header/style.scss
@@ -8,8 +8,8 @@
   position: fixed;
   padding: 25px 0;
   width: 100%;
-  z-index: 528;
-  background: $colorPrimary100;
+  z-index: 58;
+  background: transparent;
   & .content {
     margin-left: $paddingSection;
     margin-right: $paddingSection;
