--- a/components/cards/style.scss
+++ b/components/cards/style.scss
@@ -8,7 +8,7 @@
   overflow: hidden;
   flex: none;
   height: 140px;
-  width: 160px;
+  // width: 160px;
   border-radius: 0.8rem;
   padding: 8px;
   overflow: hidden;
