--- a/components/buttons/style.scss
+++ b/components/buttons/style.scss
@@ -9,6 +9,8 @@
   padding: 15px 30px;
   border-radius: $raduis;
   position: relative;
+  display: flex;
+  align-items: center;
 }
 
 .btn-link {
@@ -42,6 +44,48 @@
   box-shadow: 0 0 0 0 #ff313185;
   position: absolute;
   border-radius: 4em;
+  left: 0;
+  top: 0;
+  background: rgba(255, 255, 255, 0.13);
+  opacity: 1;
+  transition: 0s;
+}
+
+.btn-link-icons {
+  background: black;
+  padding: 10px;
+  border-radius: 0.8rem;
+  & svg {
+    height: 1.2rem;
+    width: 1.2rem;
+    & * {
+      fill: white;
+    }
+  }
+}
+
+.btn-clic-effect-link:hover {
+  transition-duration: 0.1s;
+}
+
+.btn-clic-effect-link:after {
+  content: "";
+  display: block;
+  position: absolute;
+  border-radius: 0.8rem;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  transition: all 0.5s linear;
+  box-shadow: 0 0 5px 10px #00000085;
+}
+
+.btn-clic-effect-link:active:after {
+  box-shadow: 0 0 0 0 #00000085;
+  position: absolute;
+  border-radius: 0.8rem;
   left: 0;
   top: 0;
   background: rgba(255, 255, 255, 0.13);
