--- a/components/cards/style.scss
+++ b/components/cards/style.scss
@@ -1,6 +1,18 @@
 @import "../../public/style/reset.scss";
 @import "../../public/style/variable.scss";
 
+.card .cat {
+  padding: 10px;
+  border-radius: 0.8rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex: none;
+  background: black;
+  font-family: $fontManropeMedium;
+  color: white;
+  font-size: 0.9rem;
+}
 .card__categories {
   align-self: flex-start;
   position: relative;
@@ -146,18 +158,7 @@
       display: flex;
       align-items: center;
       gap: 10px;
-      & .cat {
-        padding: 10px;
-        border-radius: 0.8rem;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex: none;
-        background: black;
-        font-family: $fontManropeMedium;
-        color: white;
-        font-size: 0.9rem;
-      }
+
       & .duration {
         color: $colorGray700;
         font-size: 0.9rem;
@@ -173,6 +174,199 @@
     & .post__date {
       font-size: 0.8rem;
       color: $colorGray700;
+    }
+  }
+}
+
+.card__circle {
+  display: flex;
+  border-radius: 10px;
+  padding: 15px;
+  overflow: hidden;
+  position: relative;
+  background: white;
+  transition: all 0.3s linear;
+  & * {
+    transition: all 0.3s linear;
+  }
+  &:hover {
+    & .cover {
+      transform: scale(15);
+    }
+    & .details {
+      &::after {
+        opacity: 1;
+      }
+      & .title,
+      .date {
+        color: white;
+        margin-left: 5%;
+      }
+      & .title {
+        text-decoration: underline;
+      }
+    }
+  }
+  & .cover {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+    border-radius: $raduis;
+    width: 100px;
+    height: 100px;
+  }
+  & .details {
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    row-gap: 10px;
+    left: 0%;
+    top: 50%;
+    transform: translateY(-50%);
+    height: 100%;
+    width: 100%;
+    justify-content: center;
+    word-wrap: break-word;
+    &::after {
+      content: "";
+      height: 100%;
+      width: 100%;
+      position: absolute;
+      opacity: 0;
+      background: linear-gradient(
+        to bottom,
+        rgba(0, 0, 0, 0.305),
+        rgba(0, 0, 0, 0.998)
+      );
+    }
+    & .title {
+      font-family: $fontManropeMedium;
+      font-size: 1.2rem;
+      line-height: 1.3rem;
+      color: black;
+      z-index: 10;
+      margin-left: 22%;
+      line-break: auto;
+      word-wrap: break-word;
+    }
+    & .date {
+      font-family: $fontManropeLight;
+      font-size: 0.9rem;
+      color: black;
+      z-index: 10;
+      margin-left: 22%;
+    }
+  }
+}
+
+.card__post__principal {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+  position: relative;
+  border-radius: 0.8rem;
+  height: 400px;
+  & .cover {
+    height: 100%;
+    width: 100%;
+    flex: none;
+    border-radius: 0.8rem;
+  }
+  & .details {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    & .title {
+      background: white;
+      border-radius: 0.8rem;
+      padding: 15px;
+      margin: 15px;
+      font-family: $fontManropeMedium;
+      color: rgb(0, 0, 0);
+      font-size: 1.8rem;
+      text-decoration: none;
+      line-height: 2.2rem;
+      transition: all 0.3s linear;
+      &:hover {
+        text-decoration: underline;
+      }
+    }
+  }
+}
+
+.card__post__large {
+  border-radius: 0.8rem;
+  padding: 8px;
+  background: white;
+  display: flex;
+  align-items: center;
+  column-gap: 10px;
+  overflow: hidden;
+  & .cover {
+    height: 110px;
+    width: 150px;
+    flex: none;
+    border-radius: 0.8rem;
+    overflow: hidden;
+  }
+  & .title {
+    text-transform: uppercase;
+    font-family: $fontManropeLight;
+    color: rgb(0, 0, 0);
+    font-size: 1.3rem;
+    text-decoration: none;
+    line-height: 1.8rem;
+    transition: all 0.3s linear;
+    &:hover {
+      text-decoration: underline;
+    }
+  }
+}
+
+.card__post__default {
+  display: flex;
+  position: relative;
+  overflow: hidden;
+  height: 250px;
+
+  & .cover {
+    height: 100%;
+    width: 100%;
+    flex: none;
+    overflow: hidden;
+  }
+  & .details {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    background: linear-gradient(
+      to bottom,
+      rgba(221, 214, 214, 0),
+      rgb(0, 0, 0)
+    );
+    & .cat {
+      align-self: flex-end;
+      margin: 15px;
+    }
+    & .title {
+      font-family: $fontManropeLight;
+      font-size: 1rem;
+      line-height: 1.5rem;
+      color: white;
+      margin: 15px;
+      text-decoration: none;
+      transition: all 0.3s linear;
+      &:hover {
+        text-decoration: underline;
+      }
     }
   }
 }
