Successfully integrated the mobile menu, allowing users to navigate easily on mobile devices. When the hamburger button is activated, the menu smoothly slides into view, and the button lines transform into a cross, indicating that the menu is open.

--- a/public/style/main.scss
+++ b/public/style/main.scss
@@ -21,6 +21,8 @@ body {
   background: $colorPrimary100;
   height: 100vh;
   overflow-x: hidden;
+  display: flex;
+  flex-direction: column;
 }
 
 .page__content {
