--- a/components/header/style.scss
+++ b/components/header/style.scss
@@ -9,30 +9,36 @@
   padding: 25px 0;
   width: 100%;
   z-index: 58;
-  background: transparent;
+  background: white;
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
   & .content {
     margin-left: $paddingSection;
     margin-right: $paddingSection;
     background: white;
     align-self: stretch;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
     width: 100%;
     border-radius: $raduis;
-    padding: 10px $paddingSection;
-    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+    padding: 0;
+
     position: relative;
     z-index: 50;
+    display: flex;
+    flex-direction: column;
+    & .nav__large_screen {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      position: relative;
+    }
   }
-  &::after {
-    content: "";
-    position: absolute;
-    height: 120px;
-    width: 99.1%;
-    background: $colorPrimary100;
-    top: 0;
-  }
+  // &::after {
+  //   content: "";
+  //   position: absolute;
+  //   height: 120px;
+  //   width: 99.1%;
+  //   background: $colorPrimary100;
+  //   top: 0;
+  // }
 }
 
 .header__logo {
@@ -44,7 +50,7 @@
   & svg {
     height: 4rem;
     width: 4rem;
-    flex: none;
+    //flex: none;
   }
   & h1 {
     font-family: $fontManropeExtraBold;
@@ -92,4 +98,55 @@
   align-items: center;
   justify-content: center;
   column-gap: 15px;
+}
+
+.btn-menu {
+  background: $colorPrimaryBase;
+  display: none !important;
+  flex-direction: column;
+  row-gap: 5px;
+  padding: 10px !important;
+  border-radius: 0.2rem !important;
+  & .line {
+    height: 2px;
+    width: 25px;
+    background: white;
+    transition: transform 0.3s ease;
+  }
+  &::after {
+    border-radius: 0.2rem !important;
+  }
+}
+
+.btn-menu.active .line:nth-child(1) {
+  transform: translateY(6px) rotate(45deg);
+}
+
+.btn-menu.active .line:nth-child(2) {
+  opacity: 0;
+}
+
+.btn-menu.active .line:nth-child(3) {
+  transform: translateY(-6px) rotate(-45deg);
+}
+@media only screen and (max-width: 1200px) {
+  .header__nav,
+  .header__profil_user {
+    display: none !important;
+  }
+  .btn-menu {
+    display: flex !important;
+  }
+}
+
+@media only screen and (max-width: 570px) {
+  .header__logo svg {
+    height: 2rem !important;
+    width: 2rem !important;
+    flex: none;
+  }
+  .header__logo h1 {
+    font-size: 1rem;
+    font-family: $fontManropeExtraBold;
+  }
 }
