--- a/components/titleSection/style.scss
+++ b/components/titleSection/style.scss
@@ -25,3 +25,24 @@
 .black {
   color: black;
 }
+
+@media only screen and (max-width: 1200px) {
+  .title__section {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+}
+
+@media only screen and (max-width: 800px) {
+  .title__section {
+    & .title {
+      font-size: 2rem;
+      line-height: 3rem;
+    }
+    & .overview {
+      font-family: $fontManropeRegular;
+      font-size: 1rem;
+      line-height: 1.5rem;
+    }
+  }
+}
