--- a/components/cards/style.scss
+++ b/components/cards/style.scss
@@ -186,21 +186,25 @@
   position: relative;
   background: white;
   transition: all 0.3s linear;
+  align-items: center;
+  column-gap: 10px;
+  text-decoration: none !important;
   & * {
     transition: all 0.3s linear;
   }
   &:hover {
+    column-gap: 0;
     & .cover {
       transform: scale(15);
     }
     & .details {
+      transform: translateX(-35%);
       &::after {
         opacity: 1;
       }
       & .title,
       .date {
         color: white;
-        margin-left: 5%;
       }
       & .title {
         text-decoration: underline;
@@ -212,28 +216,27 @@
     align-items: center;
     justify-content: center;
     overflow: hidden;
-    border-radius: $raduis;
+    border-radius: 50%;
     width: 100px;
     height: 100px;
+    flex: none;
   }
   & .details {
-    position: absolute;
     display: flex;
     flex-direction: column;
     row-gap: 10px;
-    left: 0%;
-    top: 50%;
-    transform: translateY(-50%);
     height: 100%;
     width: 100%;
     justify-content: center;
     word-wrap: break-word;
+
     &::after {
       content: "";
       height: 100%;
       width: 100%;
       position: absolute;
       opacity: 0;
+      transform: scale(5);
       background: linear-gradient(
         to bottom,
         rgba(0, 0, 0, 0.305),
@@ -241,21 +244,18 @@
       );
     }
     & .title {
-      font-family: $fontManropeMedium;
-      font-size: 1.2rem;
+      font-family: $fontManropeLight;
+      font-size: 1rem;
       line-height: 1.3rem;
       color: black;
       z-index: 10;
-      margin-left: 22%;
-      line-break: auto;
-      word-wrap: break-word;
     }
     & .date {
       font-family: $fontManropeLight;
-      font-size: 0.9rem;
+      font-size: 0.8rem;
       color: black;
       z-index: 10;
-      margin-left: 22%;
+      // margin-left: 22%;
     }
   }
 }
@@ -363,6 +363,47 @@
       color: white;
       margin: 15px;
       text-decoration: none;
+      transition: all 0.3s linear;
+      &:hover {
+        text-decoration: underline;
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 510px) {
+  .card__circle {
+    & .title,
+    .date {
+      font-size: 0.9rem !important;
+    }
+    & .date {
+      font-size: 0.7rem !important;
+    }
+  }
+
+  .card__post__large {
+    border-radius: 0.8rem;
+    padding: 8px;
+    background: white;
+    display: flex;
+    align-items: center;
+    column-gap: 10px;
+    overflow: hidden;
+    & .cover {
+      height: 80px;
+      width: 100px;
+      flex: none;
+      border-radius: 0.8rem;
+      overflow: hidden;
+    }
+    & .title {
+      text-transform: uppercase;
+      font-family: $fontManropeLight;
+      color: rgb(0, 0, 0);
+      font-size: 0.9rem;
+      text-decoration: none;
+      line-height: 1.2rem;
       transition: all 0.3s linear;
       &:hover {
         text-decoration: underline;
