--- a/components/footer/style.scss
+++ b/components/footer/style.scss
@@ -7,19 +7,23 @@
   display: flex;
   flex-direction: column;
   row-gap: 25px;
+  padding-bottom: 85px !important;
 }
 
 .copyMention {
   display: flex;
   padding: 20px;
   background: white;
-  border-radius: $raduis;
+  border-radius: 0.8rem;
   font-family: $fontManropeLight;
   gap: 5px;
   align-items: center;
   color: black;
+  font-size: 0.9rem;
+  flex-wrap: wrap;
+
   & a {
-    text-decoration: none;
+    text-decoration: underline;
     color: black;
   }
 }
@@ -27,6 +31,7 @@
 .content__footer {
   display: flex;
   gap: 25px;
+  flex-wrap: wrap;
 }
 
 .box__footer {
