--- a/components/cards/style.scss
+++ b/components/cards/style.scss
@@ -411,3 +411,45 @@
     }
   }
 }
+
+.card__auhtor__profil {
+  display: flex;
+  flex-direction: column;
+  padding: 15px;
+  border: 5px solid white;
+  border-radius: 0.5rem;
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+  row-gap: 15px;
+  & .card__header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    & .profil {
+      overflow: hidden;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 80px;
+      width: 100px;
+      border: 5px solid white;
+      border-radius: 0.5rem;
+      flex: none;
+    }
+    & .btn__profil_user {
+      background: black;
+      color: white;
+      border-radius: 0.5rem;
+      font-size: 0.9rem;
+      padding: 15px;
+    }
+  }
+  & .name__author {
+    font-family: $fontManropeExtraBold;
+    font-size: 1.1rem;
+  }
+  & .overview {
+    font-family: $fontManropeLight;
+    font-size: 0.9rem;
+    line-height: 1.2rem;
+  }
+}
