--- a/app/articles/style.scss
+++ b/app/articles/style.scss
@@ -1,2 +1,42 @@
 @import "../../public/style/reset.scss";
 @import "../../public/style/variable.scss";
+
+.post__list {
+  display: flex;
+  flex-direction: column;
+  row-gap: 25px;
+}
+
+.content__post {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  gap: 25px;
+  & .card {
+    width: auto !important;
+    flex: none !important;
+  }
+}
+
+@media only screen and (max-width: 1700px) {
+  .content__post {
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
+
+@media only screen and (max-width: 1400px) {
+  .content__post {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+@media only screen and (max-width: 1200px) {
+  .content__post {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media only screen and (max-width: 750px) {
+  .content__post {
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
