--- a/app/contact/style.scss
+++ b/app/contact/style.scss
@@ -1,2 +1,42 @@
 @import "../../public/style/reset.scss";
 @import "../../public/style/variable.scss";
+
+.contact__container {
+  display: flex;
+  flex-direction: column;
+  row-gap: 25px;
+}
+
+.form__container {
+  background: white;
+  display: flex;
+  border-radius: 0.8rem;
+  padding: 15px;
+}
+
+#form__contact {
+  display: flex;
+  flex-direction: column;
+  row-gap: 25px;
+  width: 100%;
+  padding: 5px;
+  overflow: hidden;
+  & .btn {
+    align-self: flex-end;
+  }
+  & .box-form {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 25px;
+  }
+}
+
+@media only screen and (max-width: 800px) {
+  #form__contact {
+    & .box-form {
+      display: grid;
+      grid-template-columns: 1fr;
+      gap: 25px;
+    }
+  }
+}
