--- a/components/navMobile/style.scss
+++ b/components/navMobile/style.scss
@@ -70,6 +70,10 @@
     color: rgba(255, 255, 255, 0.397);
   }
 }
+.nav__mobile .connect-user {
+  align-items: flex-start !important;
+  padding-bottom: 10px !important;
+}
 
 @media only screen and (max-width: 570px) {
   .nav__mobile {
