--- a/components/buttons/style.scss
+++ b/components/buttons/style.scss
@@ -4,7 +4,7 @@
 .btn {
   border: none;
   outline: none;
-  font-family: $fontManropeMedium;
+  font-family: $fontManropeLight;
   text-decoration: none;
   padding: 15px 30px;
   border-radius: $raduis;
@@ -12,8 +12,14 @@
   display: flex;
   align-items: center;
   text-align: center;
+  font-size: 0.9rem;
 }
 
+.btn-default {
+  background: transparent;
+  border: 2px solid $colorPrimaryBase;
+  color: $colorPrimaryBase;
+}
 .btn-link {
   background: $colorPrimaryBase;
   color: white;
