Implemented image selection functionality and display in the cover upload section. Added a function to clear file selection.

--- a/app/articles/create/style.scss
+++ b/app/articles/create/style.scss
@@ -22,3 +22,105 @@ form {
   background: white;
   min-height: 200px;
 }
+
+.upload__section {
+  display: flex;
+  border-radius: 0.8rem;
+  height: 400px;
+  background: white;
+  padding: 25px;
+  position: relative;
+  overflow: hidden;
+}
+.is-uploaded {
+  display: flex;
+  flex-direction: column;
+  border-radius: 0.8rem;
+  overflow: hidden;
+  position: relative;
+  height: 100%;
+  & .cover__img {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    & img {
+      height: 100%;
+      width: 100%;
+      object-fit: cover;
+    }
+  }
+  & .selected__pictures {
+    position: absolute;
+    padding: 10px 5px;
+    border-radius: 0.8rem;
+    left: 2%;
+    bottom: 2%;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
+      rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
+      rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+    gap: 15px;
+    border: 2px solid $colorPrimaryBase;
+    background: rgba(255, 255, 255, 0.2);
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    & p {
+      font-family: $fontManropeLight;
+      font-size: 0.6rem;
+      color: white;
+      text-shadow: 1px 1px rgba(0, 0, 0, 0.8);
+    }
+    & .btn {
+      padding: 12px !important;
+      font-size: 0.7rem !important;
+    }
+  }
+}
+.no-uploaded {
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  & .dropped-file {
+    border: 2px dashed rgba($colorPrimaryBase, 1) !important;
+  }
+  & .no__cover {
+    display: flex;
+    flex-direction: column;
+    row-gap: 15px;
+    border: 2px dashed rgba($colorPrimaryBase, 0.2);
+    // height: 100%;
+    width: 100%;
+    padding: 25px 0;
+    border-radius: 0.8rem;
+    align-items: center;
+    justify-content: center;
+    & .box-img {
+      padding: 25px;
+      border-radius: 0.8rem;
+      background: rgba($colorPrimaryBase, 0.08);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: $colorPrimaryBase;
+      flex: none;
+      & svg {
+        height: 2rem;
+        width: 2rem;
+      }
+    }
+    & .text {
+      font-family: $fontManropeLight;
+      font-size: 0.9rem;
+      text-align: center;
+      line-height: 1.2rem;
+    }
+    & .text-two {
+      font-family: $fontManropeExtraBold;
+    }
+  }
+}
