user can add a comment

--- a/app/articles/[postId]/style.scss
+++ b/app/articles/[postId]/style.scss
@@ -61,3 +61,10 @@
     line-height: 1.5rem;
   }
 }
+
+.loading_section_comment {
+  height: 400px;
+  padding: 8px;
+  background: white;
+  border-radius: 0.8rem;
+}
