--- a/app/myprofil/style.scss
+++ b/app/myprofil/style.scss
@@ -7,7 +7,9 @@
   gap: 25px;
   align-items: self-start;
 }
-
+.btn {
+  align-self: center;
+}
 .user__cover {
   display: flex;
   flex-direction: column;
