--- a/components/footer/style.scss
+++ b/components/footer/style.scss
@@ -22,7 +22,7 @@
   color: black;
   font-size: 0.9rem;
   flex-wrap: wrap;
-
+  align-self: stretch;
   & a {
     text-decoration: underline;
     color: black;
@@ -33,6 +33,8 @@
   display: flex;
   gap: 25px;
   flex-wrap: wrap;
+
+  align-self: stretch;
 }
 
 .box__footer {
