--- a/components/titleSection/style.scss
+++ b/components/titleSection/style.scss
@@ -7,14 +7,17 @@
   gap: 10px;
   & .title {
     font-family: $fontManropeLight;
-    font-size: 2.9rem;
+    font-size: 2.5rem;
     line-height: 3rem;
     text-transform: uppercase;
+    align-self: flex-start;
+    text-align: left;
   }
   & .overview {
     font-family: $fontManropeLight;
     font-size: 1rem;
     line-height: 1.5rem;
+    text-align: left;
   }
 }
 
